--- a/client/package.json
+++ b/client/package.json
@@ -21,12 +21,19 @@
     "@types/node": "^18.0.3",
     "@types/webpack": "^5.28.0",
     "@types/webpack-dev-server": "^4.7.2",
+    "autoprefixer": "^10.4.7",
     "babel-loader": "^8.2.5",
     "babel-preset-es2015": "^6.24.1",
+    "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
+    "postcss": "^8.4.14",
+    "postcss-loader": "^7.0.0",
+    "postcss-preset-env": "^7.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.3.0",
+    "style-loader": "^3.3.1",
+    "tailwindcss": "^3.1.5",
     "ts-loader": "^9.3.1",
     "ts-node": "^10.8.2",
     "typescript": "^4.7.4",
