rename client folder to app

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "client": "cd ./client && npm start"
+    "client": "cd ./app && npm start"
   },
   "keywords": [],
   "author": "",
