--- a/app/package.json
+++ b/app/package.json
@@ -12,7 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6"
+    "@types/react-dom": "^18.0.6",
+    "bootstrap-icons": "^1.8.3"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
@@ -26,6 +27,8 @@
     "babel-preset-es2015": "^6.24.1",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
+    "less": "^4.1.3",
+    "less-loader": "^11.0.0",
     "postcss": "^8.4.14",
     "postcss-loader": "^7.0.0",
     "postcss-preset-env": "^7.7.2",
