--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
     "@babel/core": "^7.18.6",
     "@babel/preset-env": "^7.18.6",
     "@babel/preset-react": "^7.18.6",
+    "@svgr/webpack": "^6.2.1",
     "@types/node": "^18.0.3",
     "@types/webpack": "^5.28.0",
     "@types/webpack-dev-server": "^4.7.2",
@@ -30,7 +31,9 @@
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
     "postcss": "^8.4.14",
+    "postcss-import": "^14.1.0",
     "postcss-loader": "^7.0.0",
+    "postcss-nesting": "^10.1.10",
     "postcss-preset-env": "^7.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
