--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -1,4 +1,7 @@
 {
+  "compileOnSave": true,
+  "include": ["src/**/*"],
+  "exclude": ["node_modules"],
   "compilerOptions": {
     "outDir": "./public/",
     "sourceMap": true,
