--- a/app/package.json
+++ b/app/package.json
@@ -11,14 +11,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.3",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
-    "bootstrap-icons": "^1.8.3"
+    "bootstrap-icons": "^1.8.3",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
     "@babel/preset-env": "^7.18.6",
     "@babel/preset-react": "^7.18.6",
+    "@redux-devtools/core": "^3.13.1",
     "@svgr/webpack": "^6.2.1",
     "@types/node": "^18.0.3",
     "@types/webpack": "^5.28.0",
@@ -38,6 +43,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.3.0",
+    "redux-devtools-extension": "^2.13.9",
     "style-loader": "^3.3.1",
     "tailwindcss": "^3.1.5",
     "ts-loader": "^9.3.1",
