--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "bootstrap-icons": "^1.8.3",
+    "classnames": "^2.3.1",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1"
