--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -10,6 +10,7 @@
     "target": "es5",
     "jsx": "react",
     "allowJs": true,
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "baseUrl": "src"
   }
 }
